add ontology inference for TIS